--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -1,5 +1,5 @@
 {% extends 'products/base.html' %}
-{% load static  %}
+{% load static cache %}
 
 
 {% block css %}
@@ -57,6 +57,8 @@
 
             <div class="row">
 
+            {% cache 30 object_list %}
+
                 {% for product in object_list %}
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
@@ -82,6 +84,8 @@
                     </div>
                 </div>
                 {% endfor %}
+            {% endcache %}
+
             </div>
 
             {% if is_paginated %}
