connection of online payments

--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -1,5 +1,6 @@
 {% extends 'products/base.html' %}
 {% load static cache %}
+{% load humanize %}
 
 
 {% block css %}
@@ -71,7 +72,7 @@
                             <h4 class="card-title">
                                 <a href="#">{{ product.name }}</a>
                             </h4>
-                            <h5>{{ product.price }} сом</h5>
+                            <h5>{{ product.price| intcomma }} сом</h5>
                             <p class="card-text">{{ product.description }}</p>
                         </div>
                         <div class="card-footer text-center">
